cursor issue on safari fixed

--- a/styles/components/_projects.scss
+++ b/styles/components/_projects.scss
@@ -6,6 +6,7 @@
   .project-container {
     margin-top: 20rem;
     .image-container {
+      cursor: pointer;
        margin-bottom: 10rem;
        height: 25rem;
        .project-image {
@@ -20,7 +21,7 @@
           overflow: hidden;
           position: relative;
           box-shadow: 0px 0px 5px $black;
-          &:hover,&:focus {
+          &:hover,&:focus,&:active {
              .overlay {
                opacity: 0.9;
                background: $black-dark;
